# stock-mt5-ml

./: README.md  pyproject.toml
app/: error.py  main.py  metatrader.py  setup.py  yahoo.py
